app/[locale]/styles/main.scss
@use "./partials/vars" as *;
@use "./partials/navigation";
@use "./partials/button";
@use "./partials/banner";
@use "./partials/about";
@use "./partials/skills";
@use "./partials/projects";
@use "./mixins" as *;
@use "./partials/mixins" as *;
@use "./partials/swiper" as *;
@use "./partials//dropdown" as *;

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul {
  margin: 0;
  padding: 0;
}

h1 {
  font-size: clamp(1.5rem, 1vw, 2.75rem);
}
h2 {
  font-size: clamp(1.3rem, 1vw, 1.75rem);
}
h3 {
  font-size: clamp(1.2rem, 1vw, 1.55rem);
}
h4 {
  font-size: clamp(1rem, 1vw, 1.35rem);
  font-weight: normal;
}
h5 {
  font-size: clamp(0.95rem, 1vw, 1rem);
  font-weight: normal;
}
h6 {
  font-size: clamp(0.8rem, 1vw, 0.75rem);
  font-weight: normal;
}

p,
li {
  font-size: clamp(0.7rem, 1vw, 0.2rem);
}
span {
  font-size: clamp(0.6rem, 1vw, 0.2rem);
}

li {
  list-style: none;
}

a {
  font-size: clamp(0.7rem, 1vw, 0.2rem);
  margin: 0;
  padding: 0;
  text-decoration: none;
  cursor: pointer;
}

button {
  font-size: clamp(1rem, 1vw, 0.35rem);
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  border: none;
  outline: none;
  cursor: pointer;
  background: none;
}

img {
  display: block;
  margin: 0;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
}

body {
  user-select: none;
  color: var(--color--black);
  background-color: var(--color--bg-light);
  font-size: 16px;
  line-height: 1.5;
  overflow-x: hidden;

  &::-webkit-scrollbar {
    width: 7px;
  }

  &::-webkit-scrollbar-track {
    background: var(--color--blue-grey-2);
  }

  &::-webkit-scrollbar-thumb {
    background: linear-gradient(to top, #fca26e 30%, #68b8c1 100%);
    border-radius: 1rem;
  }
}
[data-theme="dark"] body {
  color: var(--color--white);
  background-color: var(--color--bg-dark);
}

#background-video {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: auto;
}

.progress-bar {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;

  height: 4px;
  background: linear-gradient(90deg, #fca26e 20%, #fcfbfc 50%, #68b8c1 100%);
  transform-origin: 0%;

  z-index: 9999;
}
[data-theme="dark"] .progress-bar {
  background: linear-gradient(90deg, #68b8c1 30%, #000 50%, #fca26e 100%);
}

.logo {
  &__img {
    object-fit: contain;
    border: 1px solid var(--color--dark-burger);
    border-radius: 50%;
  }
  @include useOnHover {
    transform: scale(var(--scale));
  }
  &__footer {
    padding-bottom: 1rem;
  }
}
[data-theme="dark"] .logo {
  &__img {
    border: 1px solid var(--color--light-burger);
  }
}

//utilities
.u-pad-2 {
  padding: 2rem;
}

.title,
.text,
.greetings,
#scene-container {
  position: relative;
}

#scene-container {
  width: 100%;
}

.greetings {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 10rem;
  &__container {
    padding: 2rem;
    background-color: var(--color--light-opacity);
    border-radius: 3%;
    width: max-content;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: center;
    align-items: center;
  }
}
[data-theme="dark"] .greetings__container {
  background-color: var(--color--dark-opacity);
}

.icons {
  padding-top: 1rem;
  @include flex(column, center, center);
  gap: 1.2rem;
  flex-wrap: wrap;

  @include useScreen("tablet-xl") {
    flex-wrap: nowrap;
    justify-content: space-between;
  }

  &__block {
    @include flex(row, center, center);
    gap: 1.2rem;

    &-title {
      color: var(--color--white);
      text-align: center;
    }
    &-links {
      @include flex(row, center, center);
      gap: 1.2rem;

      @include useScreen("tablet-xl") {
        justify-content: space-between;
      }
      a {
        position: relative;
        @include flex(row, center, center);

        width: 30px;
        height: 30px;

        color: var(--color--white);

        border: 2px solid var(--color--white);
        border-radius: 50%;
        opacity: 0.7;

        @include useOnHover {
          z-index: 10;
          color: var(--color--light-blue-2);
          border-color: var(--color--light-blue-2);
          opacity: 1;
          text-align: center;
          @include flex(row, center, center);
          &::before {
            width: max-content;
            position: absolute;
            content: attr(data-text);
            top: 35px;
            border-radius: 1rem;

            background: radial-gradient(
              80.97% 80.37% at 56.01% 19.03%,
              var(--color--light-blue-1) 0%,
              var(--color--light-blue-4) 99.23%
            );
            padding: 0.5rem;
            color: var(--color--white);
            font-size: 10px;
          }
        }
        @include useOnClick {
          color: var(--color--light-blue-4);
          border-color: var(--color--light-blue-4);
          opacity: 1;
        }
      }
    }
  }
}
[data-theme="dark"] .icons {
  &__block {
    color: var(--color--black);
    &-title {
      color: var(--color--blue-grey-2);
    }
    &-links {
      color: var(--color--black);
      a {
        border: 2px solid var(--color--blue-grey-2);
        color: var(--color--black);
        @include useOnHover {
          color: var(--color--orange-1);
          border-color: var(--color--orange-1);

          &:before {
            background: radial-gradient(
              80.97% 80.37% at 56.01% 19.03%,
              var(--color--orange-1) 0%,
              var(--color--orange-4) 99.23%
            );
          }
        }
      }
      @include useOnClick {
        color: var(--color--orange-4);
        border-color: var(--color--orange-4);
      }
    }
  }
}

.footer-contact {
  @include flex(column, center, center);
  gap: 1rem;

  @include useScreen("tablet-sm") {
    flex-direction: row;
    gap: 3rem;
  }

  &__title {
    letter-spacing: 0.1rem;
    line-height: 2rem;
    color: var(--color--white);
    text-align: center;
    width: 70%;
    @include useScreen("tablet-sm") {
      width: 30%;
    }
  }
}
[data-theme="dark"] .footer-contact {
  &__title {
    color: var(--color--blue-grey-3);
  }
}

